@@ -38,6 +38,8 @@ Bugs fixed:
 - 1613933 Fixed embedded Objects in Indications do not work
 - 1613936 Fixed associator call fails when role parameters are set
 - 1614075 Fixed enabling slp can lead to a segfault
+- 1529134 Fixed internal provider associator operations
+
 
 Changes in 1.1.1
 ================
