@@ -1,3 +1,8 @@
+2006-12-13  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
+
+	* internalProvider.c: 
+	Fixed 1529134: internal provider associator operations
+	
 2006-12-12  Sven Schuetz
 
 	* cimslpCMPI.c:
